[project]
name = "dyn2py"
version = "0.3.3"
description = "Extract python code from Dynamo graphs"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["dynamo", "dyn", "visual programming"]
license = { file = "LICENSE" }


authors = [{ name = "infeeeee", email = "gyetpet@mailbox.org" }]
maintainers = [{ name = "infeeeee", email = "gyetpet@mailbox.org" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

dependencies = ["importlib_metadata", "pathvalidate", "simplejson"]

[project.optional-dependencies]
build = ["pyinstaller"]
doc = ["pdoc"]

[project.urls]
documentation = "https://infeeeee.github.io/dyn2py"
repository = "https://github.com/infeeeee/dyn2py"
changelog = "https://github.com/infeeeee/dyn2py/releases"


[project.scripts]
dyn2py = "dyn2py:__command_line"


[build-system]
requires = ["setuptools", "wheel"]

[tool.setuptools]
packages = ["dyn2py"]
